--- a/PmProject-SPA/package.json
+++ b/PmProject-SPA/package.json
@@ -24,7 +24,9 @@
     "bootstrap": "^4.5.0",
     "bootswatch": "^4.5.0",
     "font-awesome": "^4.7.0",
+    "guid-typescript": "^1.0.9",
     "ngx-bootstrap": "^5.6.1",
+    "ngx-gallery-9": "^1.0.6",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
