--- a/PmProject.API/PmProject.API.csproj
+++ b/PmProject.API/PmProject.API.csproj
@@ -15,5 +15,6 @@
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="3.1.2"/>
     <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="3.1.2"/>
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="7.0.0"/>
+    <PackageReference Include="CloudinaryDotNet" Version="1.10.0"/>
   </ItemGroup>
 </Project>
