--- a/PmProject-SPA/package.json
+++ b/PmProject-SPA/package.json
@@ -20,11 +20,16 @@
     "@angular/platform-browser-dynamic": "~9.1.7",
     "@angular/router": "~9.1.7",
     "@auth0/angular-jwt": "^4.1.2",
+    "@swimlane/ngx-datatable": "^17.0.0",
     "alertifyjs": "^1.13.1",
+    "angular-datatables": "^9.0.2",
     "bootstrap": "^4.5.0",
     "bootswatch": "^4.5.0",
+    "datatables.net": "^1.10.21",
+    "datatables.net-dt": "^1.10.21",
     "font-awesome": "^4.7.0",
     "guid-typescript": "^1.0.9",
+    "jquery": "^3.5.1",
     "ng2-file-upload": "^1.4.0",
     "ngx-bootstrap": "^5.6.1",
     "ngx-gallery-9": "^1.0.6",
@@ -38,9 +43,11 @@
     "@angular-devkit/build-angular": "~0.901.6",
     "@angular/cli": "~9.1.6",
     "@angular/compiler-cli": "~9.1.7",
-    "@types/node": "^12.11.1",
+    "@types/datatables.net": "^1.10.19",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
+    "@types/jquery": "^3.3.38",
+    "@types/node": "^12.11.1",
     "codelyzer": "^5.1.2",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
