--- a/PmProject-SPA/package.json
+++ b/PmProject-SPA/package.json
@@ -37,6 +37,7 @@
     "ngx-gallery-9": "^1.0.6",
     "ngx-timeago": "^1.0.4",
     "rxjs": "~6.5.4",
+    "signature_pad": "^3.0.0-beta.3",
     "time-ago-pipe": "^1.3.2",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
