--- a/PmProject-SPA/package.json
+++ b/PmProject-SPA/package.json
@@ -35,6 +35,7 @@
     "ng2-file-upload": "^1.4.0",
     "ngx-bootstrap": "^5.6.1",
     "ngx-gallery-9": "^1.0.6",
+    "ngx-spinner": "^10.0.1",
     "ngx-timeago": "^1.0.4",
     "rxjs": "~6.5.4",
     "signature_pad": "^3.0.0-beta.3",
