--- a/PmProject-SPA/package.json
+++ b/PmProject-SPA/package.json
@@ -25,13 +25,18 @@
     "@swimlane/ngx-datatable": "^17.0.0",
     "alertifyjs": "^1.13.1",
     "angular-datatables": "^9.0.2",
+    "angular-file-saver": "^1.1.3",
     "bootstrap": "^4.5.0",
     "bootswatch": "^4.5.0",
     "datatables.net": "^1.10.21",
     "datatables.net-dt": "^1.10.21",
+    "docx": "^5.3.0",
+    "file-saver": "^2.0.2",
     "font-awesome": "^4.7.0",
     "guid-typescript": "^1.0.9",
+    "html2canvas": "^1.0.0-rc.7",
     "jquery": "^3.5.1",
+    "jspdf": "^2.0.0",
     "ng2-file-upload": "^1.4.0",
     "ngx-bootstrap": "^5.6.1",
     "ngx-gallery-9": "^1.0.6",
