--- a/PmProject-SPA/angular.json
+++ b/PmProject-SPA/angular.json
@@ -126,5 +126,8 @@
       }
     }
   },
-  "defaultProject": "PmProject-SPA"
+  "defaultProject": "PmProject-SPA",
+  "cli": {
+    "analytics": false
+  }
 }
