--- a/PmProject-SPA/package.json
+++ b/PmProject-SPA/package.json
@@ -53,6 +53,7 @@
     "@angular/cli": "~9.1.6",
     "@angular/compiler-cli": "~9.1.7",
     "@types/datatables.net": "^1.10.19",
+    "@types/file-saver": "^2.0.1",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/jquery": "^3.3.38",
