--- a/PmProject-SPA/package.json
+++ b/PmProject-SPA/package.json
@@ -40,6 +40,7 @@
     "ng2-file-upload": "^1.4.0",
     "ngx-bootstrap": "^5.6.1",
     "ngx-gallery-9": "^1.0.6",
+    "ngx-image-compress": "^8.0.4",
     "ngx-spinner": "^10.0.1",
     "ngx-timeago": "^1.0.4",
     "rxjs": "~6.5.4",
